--- a/_Jupyter Notebooks/mash.ipynb
+++ b/_Jupyter Notebooks/mash.ipynb
@@ -26,9 +26,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-05b1eae9c4f7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m18\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmix_0\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"mix_{0}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"purple\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1296x576 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "fig = plt.figure(figsize=(18,8))\n",
     "\n",
@@ -58,54 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load in mixture proportion results as dataframe\n",
     "pheno = \"height\"\n",
-    "os.chdir('C:\\\\Users\\\\Carrie Zhu\\\\Documents\\\\Research\\\\GWAS-frontera\\\\GWAS_Results\\\\{0}'.format(pheno))\n",
+    "os.chdir('C:\\\\Users\\\\Carrie Zhu\\\\Documents\\\\Research\\\\GWAS-frontera\\\\OLD\\\\GWAS_Results_OLD\\\\{0}'.format(pheno))\n",
     "df = pd.read_csv(\"{0}mixprop_100_all.txt\".format(pheno),sep=\"\\t\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get mean and std error; split matrice name into correlation and effect categories\n",
-    "df_values = pd.DataFrame({'sem':(df.std(axis=1)/np.sqrt(len(df.columns)-1)),'ave':df.mean(axis=1)})\n",
-    "df = pd.concat([df['mix_0'], df_values['ave'], df_values['sem']], axis=1)\n",
-    "split_df = df[\"mix_0\"].str.split(\"_\", n=2, expand = True)\n",
-    "df['corr'] = split_df[1].astype(float)\n",
-    "df['effect'] = split_df[0] + split_df[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create pivot table to hypothesis and null matrices for averages and sem\n",
-    "df_hyp = df.loc[pd.notnull(df['effect'])]\n",
-    "df_ave = df_hyp.pivot(index='corr',columns='effect',values='ave')\n",
-    "df_ave = df_ave.reindex(columns=['f1','f3', 'f2', 'f1.5','equal1','m1.5','m2','m3','m1'])\n",
-    "df_ave = df_ave.sort_values('corr', ascending=False)\n",
-    "\n",
-    "df_sem = df_hyp.pivot(index='corr',columns='effect',values='sem')\n",
-    "df_sem = df_sem.reindex(columns=['f1','f3', 'f2', 'f1.5','equal1','m1.5','m2','m3','m1'])\n",
-    "df_sem = df_sem.sort_values('corr', ascending=False)\n",
-    "\n",
-    "df_null = df.loc[pd.isnull(df['effect'])]\n",
-    "df_null_ave = pd.DataFrame(list(df_null['ave']), index=list(df_null['mix_0']), columns=['Average']).T\n",
-    "df_null_sem = pd.DataFrame(list(df_null['sem']), index=list(df_null['mix_0']), columns=['SEM']).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,181 +114,107 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>effect</th>\n",
-       "      <th>f1</th>\n",
-       "      <th>f3</th>\n",
-       "      <th>f2</th>\n",
-       "      <th>f1.5</th>\n",
-       "      <th>equal1</th>\n",
-       "      <th>m1.5</th>\n",
-       "      <th>m2</th>\n",
-       "      <th>m3</th>\n",
-       "      <th>m1</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mix_0</th>\n",
+       "      <th>ave</th>\n",
+       "      <th>sem</th>\n",
        "      <th>corr</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>effect</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1.00</th>\n",
+       "      <th>0</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.007205</td>\n",
-       "      <td>0.007456</td>\n",
-       "      <td>0.027508</td>\n",
-       "      <td>0.168873</td>\n",
-       "      <td>0.084613</td>\n",
-       "      <td>0.010508</td>\n",
-       "      <td>0.006099</td>\n",
+       "      <td>0.386368</td>\n",
+       "      <td>0.005124</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.75</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.002353</td>\n",
-       "      <td>0.000192</td>\n",
-       "      <td>0.007579</td>\n",
-       "      <td>0.154123</td>\n",
-       "      <td>0.045660</td>\n",
-       "      <td>0.000145</td>\n",
-       "      <td>0.001526</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.50</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000746</td>\n",
-       "      <td>0.001235</td>\n",
-       "      <td>0.001546</td>\n",
-       "      <td>0.036614</td>\n",
-       "      <td>0.013917</td>\n",
-       "      <td>0.002463</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.25</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000777</td>\n",
-       "      <td>0.007535</td>\n",
-       "      <td>0.002610</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000624</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.00</th>\n",
-       "      <td>0.002129</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.001197</td>\n",
+       "      <th>1</th>\n",
+       "      <td>equal_0_1</td>\n",
        "      <td>0.003754</td>\n",
-       "      <td>0.000822</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000227</td>\n",
+       "      <td>0.002419</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>equal1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>f_0_1</td>\n",
+       "      <td>0.002129</td>\n",
+       "      <td>0.000920</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>f1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>m_0_1</td>\n",
        "      <td>0.001456</td>\n",
+       "      <td>0.000658</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>m1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-0.25</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000611</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000560</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000184</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-0.50</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000346</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.001428</td>\n",
-       "      <td>0.000226</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-0.75</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000049</td>\n",
-       "      <td>0.000387</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000023</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-1.00</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.001471</td>\n",
-       "      <td>0.000475</td>\n",
-       "      <td>0.002255</td>\n",
-       "      <td>0.000801</td>\n",
-       "      <td>0.000944</td>\n",
-       "      <td>0.000556</td>\n",
-       "      <td>0.001822</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>4</th>\n",
+       "      <td>equal_1_1</td>\n",
+       "      <td>0.168873</td>\n",
+       "      <td>0.007849</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>equal1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "effect        f1        f3        f2      f1.5    equal1      m1.5        m2  \\\n",
-       "corr                                                                           \n",
-       " 1.00        NaN  0.007205  0.007456  0.027508  0.168873  0.084613  0.010508   \n",
-       " 0.75        NaN  0.002353  0.000192  0.007579  0.154123  0.045660  0.000145   \n",
-       " 0.50        NaN  0.000746  0.001235  0.001546  0.036614  0.013917  0.002463   \n",
-       " 0.25        NaN  0.000000  0.000000  0.000777  0.007535  0.002610  0.000000   \n",
-       " 0.00   0.002129  0.000000  0.000000  0.001197  0.003754  0.000822  0.000000   \n",
-       "-0.25        NaN  0.000611  0.000000  0.000000  0.000560  0.000000  0.000000   \n",
-       "-0.50        NaN  0.000000  0.000346  0.000000  0.001428  0.000226  0.000000   \n",
-       "-0.75        NaN  0.000000  0.000000  0.000049  0.000387  0.000000  0.000000   \n",
-       "-1.00        NaN  0.001471  0.000475  0.002255  0.000801  0.000944  0.000556   \n",
-       "\n",
-       "effect        m3        m1  \n",
-       "corr                        \n",
-       " 1.00   0.006099       NaN  \n",
-       " 0.75   0.001526       NaN  \n",
-       " 0.50   0.000000       NaN  \n",
-       " 0.25   0.000624       NaN  \n",
-       " 0.00   0.000227  0.001456  \n",
-       "-0.25   0.000184       NaN  \n",
-       "-0.50   0.000000       NaN  \n",
-       "-0.75   0.000023       NaN  \n",
-       "-1.00   0.001822       NaN  "
+       "       mix_0       ave       sem  corr  effect\n",
+       "0        NaN  0.386368  0.005124   NaN     NaN\n",
+       "1  equal_0_1  0.003754  0.002419   0.0  equal1\n",
+       "2      f_0_1  0.002129  0.000920   0.0      f1\n",
+       "3      m_0_1  0.001456  0.000658   0.0      m1\n",
+       "4  equal_1_1  0.168873  0.007849   1.0  equal1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_ave"
+    "# get mean and std error; split matrice name into correlation and effect categories\n",
+    "df_values = pd.DataFrame({'sem':(df.std(axis=1)/np.sqrt(len(df.columns)-1)),'ave':df.mean(axis=1)})\n",
+    "df = pd.concat([df['mix_0'], df_values['ave'], df_values['sem']], axis=1)\n",
+    "split_df = df[\"mix_0\"].str.split(\"_\", n=2, expand = True)\n",
+    "df['corr'] = split_df[1].astype(float)\n",
+    "df['effect'] = split_df[0] + split_df[2]\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create pivot table to hypothesis and null matrices for averages and sem\n",
+    "df_hyp = df.loc[pd.notnull(df['effect'])]\n",
+    "df_ave = df_hyp.pivot(index='corr',columns='effect',values='ave')\n",
+    "df_ave = df_ave.reindex(columns=['f1','f3', 'f2', 'f1.5','equal1','m1.5','m2','m3','m1'])\n",
+    "df_ave = df_ave.sort_values('corr', ascending=False)\n",
+    "\n",
+    "df_sem = df_hyp.pivot(index='corr',columns='effect',values='sem')\n",
+    "df_sem = df_sem.reindex(columns=['f1','f3', 'f2', 'f1.5','equal1','m1.5','m2','m3','m1'])\n",
+    "df_sem = df_sem.sort_values('corr', ascending=False)\n",
+    "\n",
+    "df_null = df.loc[pd.isnull(df['effect'])]\n",
+    "df_null_ave = pd.DataFrame(list(df_null['ave']), index=list(df_null['mix_0']), columns=['Average']).T\n",
+    "df_null_sem = pd.DataFrame(list(df_null['sem']), index=list(df_null['mix_0']), columns=['SEM']).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +255,7 @@
     "plt.tick_params(labelsize=12)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"{0}mixheat_100_all.pdf\".format(pheno))"
+    "#plt.savefig(\"{0}mixheat_100_all.pdf\".format(pheno))"
    ]
   },
   {
@@ -355,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -389,6 +301,38 @@
     "corr_sum = ['%.0f' % i for i in 100*round(df_s.sum(axis=1),2)]\n",
     "corr_sum = pd.DataFrame(corr_sum)\n",
     "print(df_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "corr\n",
+       " 1.00    0.068719\n",
+       " 0.75    0.016500\n",
+       " 0.50    0.005748\n",
+       " 0.25    0.001267\n",
+       " 0.00    0.005419\n",
+       "-0.25    0.000996\n",
+       "-0.50    0.000564\n",
+       "-0.75    0.000080\n",
+       "-1.00    0.006846\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_s = df_ave * nan_weight\n",
+    "f = df_s.filter(regex='f').sum(axis=1)\n",
+    "f"
    ]
   },
   {
